<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/btn0"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:shadowColor="#0B0A0A"
            android:text="" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="" />
    </GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="299dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRenitialiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Reset"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />
</androidx.constraintlayout.widget.ConstraintLayout>